# jellium-desktop-rtx

./: CHANGELOG.md  README.md
.github/workflows/: build-windows.yml
resources/win/: iconres.rc.in
src/: Cargo.toml
src/gpu_paint/: Cargo.toml
src/jfn_cef/: build.rs
src/jfn_cef/src/: app.rs  business_common.rs  business_web.rs  injection.rs  ipc.rs  lib.rs  updater.rs
src/jfn_rust/src/: app.rs
src/mpv/: Cargo.toml
src/mpv/src/: boot.rs
src/paths/src/: lib.rs
src/playback/src/: ingest_driver.rs
src/updater/: Cargo.toml  build.rs  updater.manifest
src/updater/src/: main.rs  win.rs
src/web/: native-shim.js
src/xtask/src/: build.rs  package.rs  platform_windows.rs
