[package]
name = "jfn-mpv"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_mpv"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
parking_lot.workspace = true
jfn-color = { path = "../color" }
libc.workspace = true
tracing.workspace = true

# NVIDIA-GPU presence check (DXGI adapter enumeration) for the RTX video guard.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[lints]
workspace = true
